--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-beautifulsoup4==4.3.2
-html5lib==1.0b3
-requests==2.20.0
-six==1.5.2
-wsgiref==0.1.2
+beautifulsoup4==4.11.1
+certifi==2021.10.8
+charset-normalizer==2.0.12
+idna==3.3
+requests==2.27.1
+soupsieve==2.3.2.post1
+urllib3==1.26.9
